2007-05-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/score/cpu.h: Remove CPU_HAS_OWN_HOST_TO_NETWORK_ROUTINES.

2007-04-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* cpu.c: 
	  Use Context_Control_fp* instead of void* for fp_contexts.
	* rtems/score/cpu.h:
	  Use Context_Control_fp* instead of void* for fp_contexts.
	  Eliminate evil casts.

2006-11-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/score/types.h: Remove unsigned64, signed64.

2006-11-14	Jiri Gaisler <jiri@gaisler.com>

	* cpu_asm.S: Properly support synchronous traps.

2006-01-16	Joel Sherrill <joel@OARcorp.com>

	* rtems/score/cpu.h: Part of a large patch to improve Doxygen output.
	As a side-effect, grammar and spelling errors were corrected, spacing
	errors were address, and some variable names were improved.

2005-11-08	Ralf Corsepius <ralf.corsepius@rtems.org>

	* rtems/score/types.h: Eliminate unsigned16, unsigned32.

2005-10-27	Ralf Corsepius <ralf.corsepius@rtems.org>

	* rtems/asm.h: Remove private version of CONCAT macros.
	Include <rtems/concat.h> instead.

2005-02-08	Ralf Corsepius <ralf.corsepius@rtems.org>

	* Makefile.am: Split out preinstallation rules.
	* preinstall.am: New (Split out from Makefile.am).

2005-02-04	Ralf Corsepius <ralf.corsepius@rtems.org>

	PR 754/rtems
	* rtems/asm.h: New (relocated from .).
	* asm.h: Remove (moved to rtems/asm.h).
	* Makefile.am: Reflect changes above.

2004-01-28	Ralf Corsepius <ralf.corsepiu@rtems.org>

	* asm.h, rtems/score/cpu.h, rtems/score/sparc.h,
	rtems/score/types.h: New header guards.

2005-01-24	Ralf Corsepius <ralf.corsepius@rtems.org>

	* rtems/score/types.h: Remove signed8, signed16, signed32,
	unsigned8, unsigned16, unsigned32.

2005-01-24	Ralf Corsepius <ralf.corsepius@rtems.org>

	* rtems/score/cpu.h: *_swap_u32( uint32_t ).

2005-01-24	Ralf Corsepius <ralf.corsepius@rtems.org>

	* rtems/score/types.h: #include <rtems/stdint.h>.

2005-01-22	Ralf Corsepius <ralf.corsepius@rtems.org>
